<resources>
    <string name="app_name">Calc 2</string>
    <string name="key_clear">C</string>
    <string name="key_backspace">Backspace</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="result">100500</string>
    <string name="key_div">/</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_multi">*</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_minus">-</string>
    <string name="key_dot">.</string>
    <string name="key_0">0</string>
    <string name="key_plus">+</string>
    <string name="key_equals">=</string>
    <string name="key_select_theme">Select\nTheme</string>
    <string name="select_theme_light">Light theme</string>
    <string name="select_theme_dark">Dark theme</string>
    <string name="select_theme_green">Green theme</string>
    <string name="select_theme_emo">Emo Theme</string>
    <string name="theme_one">Classic</string>
    <string name="theme_two">Fun</string>
    <string name="theme_three">Magic</string>
    <string name="theme_four">Metal</string>
</resources>