<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pink_background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_weight="1"
        android:text="@string/result"
        tools:ignore="RtlSymmetry"
        style="@style/InputField" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_weight="5"
        android:columnCount="4">

        <Button
            android:id="@+id/key_select_theme"
            style="?attr/system_button_style"
            android:text="@string/key_select_theme"
            />

        <Button
            android:id="@+id/key_clear"
            style="?attr/system_button_style"
            android:text="@string/key_clear" />

        <Button
            android:id="@+id/key_backspace"
            style="?attr/system_button_style"
            android:layout_columnSpan="2"
            android:text="@string/key_backspace" />

        <Button
            android:id="@+id/key_7"
            style="@style/DigitButtons"
            android:layout_column="0"
            android:text="@string/key_7" />

        <Button
            android:id="@+id/key_8"
            style="@style/DigitButtons"
            android:text="@string/key_8" />

        <Button
            android:id="@+id/key_9"
            style="@style/DigitButtons"
            android:text="@string/key_9" />

        <Button
            android:id="@+id/key_div"
            style="@style/OperationButtons"
            android:text="@string/key_div" />

        <Button
            android:id="@+id/key_4"
            style="@style/DigitButtons"
            android:text="@string/key_4" />

        <Button
            android:id="@+id/key_5"
            style="@style/DigitButtons"
            android:text="@string/key_5" />

        <Button
            android:id="@+id/key_6"
            style="@style/DigitButtons"
            android:text="@string/key_6" />

        <Button
            android:id="@+id/key_multi"
            style="@style/OperationButtons"
            android:text="@string/key_multi" />

        <Button
            android:id="@+id/key_1"
            style="@style/DigitButtons"
            android:text="@string/key_1" />

        <Button
            android:id="@+id/key_2"
            style="@style/DigitButtons"
            android:text="@string/key_2" />

        <Button
            android:id="@+id/key_3"
            style="@style/DigitButtons"
            android:text="@string/key_3" />

        <Button
            android:id="@+id/key_minus"
            style="@style/OperationButtons"
            android:text="@string/key_minus" />

        <Button
            android:id="@+id/key_0"
            style="@style/DigitButtons"
            android:layout_columnSpan="2"
            android:text="@string/key_0" />

        <Button
            android:id="@+id/key_dot"
            style="@style/DigitButtons"
            android:text="@string/key_dot" />

        <Button
            android:id="@+id/key_plus"
            style="@style/OperationButtons"
            android:layout_rowSpan="2"
            android:text="@string/key_plus" />

        <Button
            android:id="@+id/key_equals"
            style="?attr/system_button_style"
            android:layout_columnSpan="3"
            android:text="@string/key_equals" />
    </GridLayout>
</LinearLayout>